--- a/Projeto_formsAI_pre_tratamento.ipynb
+++ b/Projeto_formsAI_pre_tratamento.ipynb
@@ -14,27 +14,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 28,
       "metadata": {
         "id": "Rgi4JPPBdiHT"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/Users/maelsonmarquesdelima/anaconda3/lib/python3.11/site-packages/pandas/core/arrays/masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
-            "  from pandas.core import (\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 33,
       "metadata": {
         "id": "_vRwsPHgBZs0"
       },
@@ -45,29 +36,302 @@
         "df3_caminho = 'base/oab_sp.csv'\n",
         "df4_caminho = 'base/unimed.csv'\n",
         "df5_caminho = 'base/vtc_operadora.csv'\n",
+        "df6_caminho = 'base/iate_clube_brasilia.csv'\n",
         "\n",
         "#melhorar para import unico"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 34,
       "metadata": {
         "id": "bU8DNRejgGs2"
       },
       "outputs": [],
       "source": [
-        "df1 = pd.read_csv(df1_caminho, delimiter =';')\n",
+        "df1 = pd.read_csv(df1_caminho, delimiter =';',encoding='utf-8')\n",
         "df2 = pd.read_csv(df2_caminho, delimiter =';')\n",
         "df3 = pd.read_csv(df3_caminho, delimiter =';')\n",
         "df4 = pd.read_csv(df4_caminho, delimiter =';')\n",
         "df5 = pd.read_csv(df5_caminho, delimiter =';')\n",
-        "\n"
+        "df6 = pd.read_csv(df6_caminho, delimiter =';')\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>number</th>\n",
+              "      <th>﻿nome_do_questionario</th>\n",
+              "      <th>﻿lgpd_diretoria</th>\n",
+              "      <th>﻿lgpd_area</th>\n",
+              "      <th>﻿lgpd_processo</th>\n",
+              "      <th>﻿descricao_do_processo</th>\n",
+              "      <th>﻿lgpd_sistema</th>\n",
+              "      <th>﻿outros_sistemas</th>\n",
+              "      <th>﻿categoria_dados</th>\n",
+              "      <th>﻿outras_categoria_dados</th>\n",
+              "      <th>...</th>\n",
+              "      <th>﻿u_finalidade_legitima</th>\n",
+              "      <th>﻿u_principio_minizacao</th>\n",
+              "      <th>﻿u_situacao_correta</th>\n",
+              "      <th>﻿outra_base_legal_justificativa</th>\n",
+              "      <th>﻿u_outra_base_legal</th>\n",
+              "      <th>﻿u_direitos_titular_parecer_juridico</th>\n",
+              "      <th>﻿u_tratamento_dado</th>\n",
+              "      <th>﻿u_mecanismos_oposicao</th>\n",
+              "      <th>﻿u_principio_transparencia</th>\n",
+              "      <th>﻿u_medida_mitigacao</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Q0036637</td>\n",
+              "      <td>Gabriela Gianini Paes Mendes</td>\n",
+              "      <td>Diretoria Jurídica</td>\n",
+              "      <td>Jurídico</td>\n",
+              "      <td>Jurídico</td>\n",
+              "      <td>processos judiciais e administrativos, parecer...</td>\n",
+              "      <td>Benner, E-mail, Outros Sistemas, Tecksoft</td>\n",
+              "      <td>PJE- TRIBUNAIS, docusign (sistemas de assinatu...</td>\n",
+              "      <td>Dados de adolescentes, Dados de prestadores de...</td>\n",
+              "      <td>sócios e dependentes do IATE e de outras insti...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Q0036680</td>\n",
+              "      <td>Inventário de Dados - Iate Clube de Brasília</td>\n",
+              "      <td>Diretoria de Patrimônio e Suprimentos</td>\n",
+              "      <td>Patrimônio e Suprimentos</td>\n",
+              "      <td>Patrimônio e Suprimentos</td>\n",
+              "      <td>Compras: cotações realizadas com fornecedores ...</td>\n",
+              "      <td>Benner, E-mail</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Dados de empregados</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>...</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Q0036694</td>\n",
+              "      <td>MARIA ALICE OLIVEIRA</td>\n",
+              "      <td>Diretoria de Secretaria</td>\n",
+              "      <td>Secretaria Social</td>\n",
+              "      <td>Secretaria Social</td>\n",
+              "      <td>transferência de títulos e admissão no quadro ...</td>\n",
+              "      <td>Tecksoft, Outros Sistemas</td>\n",
+              "      <td>PESQUISAS NO TJDFT E SERASA</td>\n",
+              "      <td>Dados de adolescentes, Dados de candidatos, Da...</td>\n",
+              "      <td>DADOS DO(A) CONJUGE</td>\n",
+              "      <td>...</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Q0036903</td>\n",
+              "      <td>Inventário de Dados - Iate Clube de Brasília -...</td>\n",
+              "      <td>Vice Diretoria de Tecnologia da Informação</td>\n",
+              "      <td>Tecnologia da Informação</td>\n",
+              "      <td>Tecnologia da Informação</td>\n",
+              "      <td>1 – A informática só acessa dados sensíveis ca...</td>\n",
+              "      <td>Benner, Pacto, Tecksoft, Outros Sistemas, E-mail</td>\n",
+              "      <td>Sistemas usados para gerenciamento de rede, an...</td>\n",
+              "      <td>Dados de consumidores - pessoa física, Dados d...</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>...</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Q0036909</td>\n",
+              "      <td>INVENTÁRIO DE DADOS DO CONSELHO DELIBERATIVO</td>\n",
+              "      <td>Conselho Deliberativo</td>\n",
+              "      <td>Conselho Deliberativo</td>\n",
+              "      <td>Conselho Deliberativo</td>\n",
+              "      <td>Informações do quadro de conselheiros (natos, ...</td>\n",
+              "      <td>Benner, E-mail, Tecksoft</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Dados de empregados, Outras categorias</td>\n",
+              "      <td>CATEGORIA DE SÓCIOS TITULARES</td>\n",
+              "      <td>...</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>5 rows × 69 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     number                              ﻿nome_do_questionario  \\\n",
+              "0  Q0036637                       Gabriela Gianini Paes Mendes   \n",
+              "1  Q0036680       Inventário de Dados - Iate Clube de Brasília   \n",
+              "2  Q0036694                               MARIA ALICE OLIVEIRA   \n",
+              "3  Q0036903  Inventário de Dados - Iate Clube de Brasília -...   \n",
+              "4  Q0036909       INVENTÁRIO DE DADOS DO CONSELHO DELIBERATIVO   \n",
+              "\n",
+              "                              ﻿lgpd_diretoria                ﻿lgpd_area  \\\n",
+              "0                          Diretoria Jurídica                  Jurídico   \n",
+              "1       Diretoria de Patrimônio e Suprimentos  Patrimônio e Suprimentos   \n",
+              "2                     Diretoria de Secretaria         Secretaria Social   \n",
+              "3  Vice Diretoria de Tecnologia da Informação  Tecnologia da Informação   \n",
+              "4                       Conselho Deliberativo     Conselho Deliberativo   \n",
+              "\n",
+              "             ﻿lgpd_processo  \\\n",
+              "0                  Jurídico   \n",
+              "1  Patrimônio e Suprimentos   \n",
+              "2         Secretaria Social   \n",
+              "3  Tecnologia da Informação   \n",
+              "4     Conselho Deliberativo   \n",
+              "\n",
+              "                              ﻿descricao_do_processo  \\\n",
+              "0  processos judiciais e administrativos, parecer...   \n",
+              "1  Compras: cotações realizadas com fornecedores ...   \n",
+              "2  transferência de títulos e admissão no quadro ...   \n",
+              "3  1 – A informática só acessa dados sensíveis ca...   \n",
+              "4  Informações do quadro de conselheiros (natos, ...   \n",
+              "\n",
+              "                                      ﻿lgpd_sistema  \\\n",
+              "0         Benner, E-mail, Outros Sistemas, Tecksoft   \n",
+              "1                                    Benner, E-mail   \n",
+              "2                         Tecksoft, Outros Sistemas   \n",
+              "3  Benner, Pacto, Tecksoft, Outros Sistemas, E-mail   \n",
+              "4                          Benner, E-mail, Tecksoft   \n",
+              "\n",
+              "                                    ﻿outros_sistemas  \\\n",
+              "0  PJE- TRIBUNAIS, docusign (sistemas de assinatu...   \n",
+              "1                                                NaN   \n",
+              "2                        PESQUISAS NO TJDFT E SERASA   \n",
+              "3  Sistemas usados para gerenciamento de rede, an...   \n",
+              "4                                                NaN   \n",
+              "\n",
+              "                                    ﻿categoria_dados  \\\n",
+              "0  Dados de adolescentes, Dados de prestadores de...   \n",
+              "1                                Dados de empregados   \n",
+              "2  Dados de adolescentes, Dados de candidatos, Da...   \n",
+              "3  Dados de consumidores - pessoa física, Dados d...   \n",
+              "4             Dados de empregados, Outras categorias   \n",
+              "\n",
+              "                             ﻿outras_categoria_dados  ...  \\\n",
+              "0  sócios e dependentes do IATE e de outras insti...  ...   \n",
+              "1                                                NaN  ...   \n",
+              "2                                DADOS DO(A) CONJUGE  ...   \n",
+              "3                                                NaN  ...   \n",
+              "4                      CATEGORIA DE SÓCIOS TITULARES  ...   \n",
+              "\n",
+              "  ﻿u_finalidade_legitima ﻿u_principio_minizacao ﻿u_situacao_correta  \\\n",
+              "0                    NaN                    NaN                 NaN   \n",
+              "1                    NaN                    NaN                 NaN   \n",
+              "2                    NaN                    NaN                 NaN   \n",
+              "3                    NaN                    NaN                 NaN   \n",
+              "4                    NaN                    NaN                 NaN   \n",
+              "\n",
+              "  ﻿outra_base_legal_justificativa ﻿u_outra_base_legal  \\\n",
+              "0                             NaN                 NaN   \n",
+              "1                             NaN                 NaN   \n",
+              "2                             NaN                 NaN   \n",
+              "3                             NaN                 NaN   \n",
+              "4                             NaN                 NaN   \n",
+              "\n",
+              "  ﻿u_direitos_titular_parecer_juridico ﻿u_tratamento_dado  \\\n",
+              "0                                  NaN                NaN   \n",
+              "1                                  NaN                NaN   \n",
+              "2                                  NaN                NaN   \n",
+              "3                                  NaN                NaN   \n",
+              "4                                  NaN                NaN   \n",
+              "\n",
+              "  ﻿u_mecanismos_oposicao ﻿u_principio_transparencia ﻿u_medida_mitigacao  \n",
+              "0                    NaN                        NaN                 NaN  \n",
+              "1                    NaN                        NaN                 NaN  \n",
+              "2                    NaN                        NaN                 NaN  \n",
+              "3                    NaN                        NaN                 NaN  \n",
+              "4                    NaN                        NaN                 NaN  \n",
+              "\n",
+              "[5 rows x 69 columns]"
+            ]
+          },
+          "execution_count": 40,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df6.head()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 41,
       "metadata": {
         "id": "gFMxJuWX79UP"
       },
@@ -79,8 +343,37 @@
         "df3.columns = [col.strip().lstrip('\\ufeff') for col in df3.columns]\n",
         "df4.columns = [col.strip().lstrip('\\ufeff') for col in df4.columns]\n",
         "df5.columns = [col.strip().lstrip('\\ufeff') for col in df5.columns]\n",
+        "df6.columns = [col.strip().lstrip('\\ufeff') for col in df6.columns]\n",
         "\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0     Não\n",
+            "1     Não\n",
+            "2     Não\n",
+            "3     Não\n",
+            "4     Não\n",
+            "     ... \n",
+            "57    Não\n",
+            "58    Sim\n",
+            "59    Sim\n",
+            "60    Sim\n",
+            "61    Não\n",
+            "Name: u_conformidade, Length: 62, dtype: object\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(df1['u_conformidade'])"
       ]
     },
     {
